Date is now correctly 2015

--- a/doc/find_package.tex
+++ b/doc/find_package.tex
@@ -15,7 +15,7 @@
     include_directories, find_package, add_executable, target_link_libraries}
 }
 
-\newcommand{\thedate}{January 6, 2015}
+\renewcommand{\today}{January 6, 2015}
 % Requires Python package Pygments
 %\usepackage{minted}
 
